--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -25,6 +25,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.soluvas</groupId>
+			<artifactId>soluvas-image-store</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.soluvas</groupId>
 			<artifactId>soluvas-commons</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
