--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -6,8 +6,8 @@
 	<artifactId>ldap-cli</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<properties>
-		<logback.version>1.0.3</logback.version>
-		<slf4j.version>1.6.4</slf4j.version>
+		<logback.version>1.0.6</logback.version>
+		<slf4j.version>1.6.6</slf4j.version>
 	</properties>
 
 	<dependencyManagement>
@@ -54,12 +54,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.0.2</version>
+			<version>2.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.0.2</version>
+			<version>2.0.4</version>
 		</dependency>
 
 		<dependency>
@@ -97,7 +97,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.2</version>
+			<version>4.2.1</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>commons-logging</artifactId>
@@ -108,7 +108,7 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.3</version>
+			<version>2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -128,6 +128,14 @@
 	</dependencies>
 
 	<repositories>
+		<repository>
+			<id>sonatype-nexus</id>
+			<url>https://oss.sonatype.org/content/groups/public/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<!-- TODO: maven.soluvas.org is deprecated, please use nexus.bippo.co.id -->
 		<repository>
 			<id>soluvas.org.thirdparty</id>
 			<url>http://maven.soluvas.org/thirdparty</url>
@@ -169,9 +177,9 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.3</version>
 				<configuration>
-					<descriptorRefs>
-						<descriptorRef>bin</descriptorRef>
-					</descriptorRefs>
+					<descriptors>
+						<descriptor>src/main/assembly/ldap-cli.xml</descriptor>
+					</descriptors>
 				</configuration>
 				<executions>
 					<execution>
