--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.soluvas.ldaptools</groupId>
-	<artifactId>ldap-tools-build</artifactId>
+	<parent>
+		<groupId>org.soluvas.ldaptools</groupId>
+		<artifactId>org.soluvas.ldaptools.parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>parent/pom.xml</relativePath>
+	</parent>
+	<artifactId>org.soluvas.ldaptools.build</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
+		<module>parent</module>
 		<module>cli</module>
 	</modules>
 
