Use LdapConnectionPool and LDAP URI.

--- a/cli/ldap-cli.properties.sample
+++ b/cli/ldap-cli.properties.sample
@@ -1,10 +1,8 @@
 # ldap-cli properties
-ldap.bind.host=localhost
-ldap.bind.port=10389
-ldap.bind.ssl=false
+ldap.uri=ldap://localhost:10389
 ldap.bind.dn=uid=admin,ou=system
 ldap.bind.password=secret
-ldap.users.basedn=ou=users,dc=berbatik,dc=com
+ldap.users.basedn=ou=users,dc=dev,dc=berbatik,dc=com
 
 # DAV URI should include username (if required) but NOT password
 image.dav.uri=http://dav.berbatik.annafi.dev/
