--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -10,6 +10,8 @@
 	</parent>
 	<artifactId>org.soluvas.ldaptools.cli</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+	<name>Soluvas LDAP CLI</name>
+	<description>CLI tool for LDAP operations.</description>
 
 	<dependencies>
 		<dependency>
@@ -19,6 +21,10 @@
 		<dependency>
 			<groupId>org.soluvas</groupId>
 			<artifactId>soluvas-commons</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.soluvas</groupId>
+			<artifactId>soluvas-ldap</artifactId>
 		</dependency>
 
 		<dependency>
@@ -130,6 +136,8 @@
 					<descriptors>
 						<descriptor>src/main/assembly/ldap-cli.xml</descriptor>
 					</descriptors>
+					<appendAssemblyId>false</appendAssemblyId>
+					<tarLongFileMode>gnu</tarLongFileMode>
 				</configuration>
 				<executions>
 					<execution>
