--- a/cli/ldap-cli.properties.sample
+++ b/cli/ldap-cli.properties.sample
@@ -4,9 +4,8 @@ ldap.bind.dn=uid=admin,ou=system
 ldap.bind.password=secret
 ldap.users.basedn=ou=users,dc=dev,dc=berbatik,dc=com
 
-# DAV URI should include username (if required) but NOT password
-image.dav.uri=http://dav.berbatik.annafi.dev/
-image.dav.password=
+# DAV URI may include username and password
+image.dav.uri=http://berbatik_dev:bippo@dav.berbatik.annafi.dev/
 # Do NOT include username and password in public URI! It can be CDN.
 image.public.uri=http://dav.berbatik.annafi.dev/
 # MongoDB URI should include username (if required) but NOT password
