--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -5,26 +5,25 @@
 	<parent>
 		<groupId>org.soluvas.ldaptools</groupId>
 		<artifactId>org.soluvas.ldaptools.parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>org.soluvas.ldaptools.cli</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
 	<name>Soluvas LDAP CLI</name>
 	<description>CLI tool for LDAP operations.</description>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.soluvas</groupId>
-			<artifactId>soluvas-image-store</artifactId>
+			<artifactId>org.soluvas.image</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.soluvas</groupId>
-			<artifactId>soluvas-commons</artifactId>
+			<artifactId>org.soluvas.commons</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.soluvas</groupId>
-			<artifactId>soluvas-ldap</artifactId>
+			<artifactId>org.soluvas.ldap</artifactId>
 		</dependency>
 		
 		<dependency>
@@ -36,12 +35,12 @@
 		<dependency>
 			<groupId>org.apache.directory.shared</groupId>
 			<artifactId>shared-ldap-client-api</artifactId>
-			<version>1.0.0-M12</version>
+			<version>1.0.0-M13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.directory.shared</groupId>
 			<artifactId>shared-ldap-codec-standalone</artifactId>
-			<version>1.0.0-M12</version>
+			<version>1.0.0-M13</version>
 			<scope>runtime</scope>
 		</dependency>
 		
@@ -67,14 +66,20 @@
 		<dependency>
 			<groupId>org.jboss.weld.se</groupId>
 			<artifactId>weld-se-core</artifactId>
-			<version>1.1.8.Final</version>
+			<version>1.1.10.Final</version>
 		</dependency>
 
 		<dependency>
-			<!-- Weld SE 1.1.8 requires slf4j-ext + cal10n-api -->
+			<!-- Weld SE 1.1.10 requires slf4j-ext + cal10n-api 0.7.3, 0.7.4 is buggy see http://jira.qos.ch/browse/CAL-29 -->
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-ext</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<!-- 0.7.4 is buggy, see http://jira.qos.ch/browse/CAL-29 and https://issues.jboss.org/browse/WELD-887 -->
+			<groupId>ch.qos.cal10n</groupId>
+			<artifactId>cal10n-api</artifactId>
+			<version>0.7.3</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
