--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.soluvas.ldaptools</groupId>
 	<artifactId>org.soluvas.ldaptools.parent</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Soluvas LDAP Tools Parent</name>
 	<description>Soluvas LDAP tools.</description>
@@ -37,8 +37,8 @@
 		<dependencies>
 			<dependency>
 				<groupId>org.soluvas</groupId>
-				<artifactId>soluvas-parent</artifactId>
-				<version>1.0.0-SNAPSHOT</version>
+				<artifactId>org.soluvas.parent</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
